--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="matchmaking">Matchmaking</string>
     <string name="leaderboard">Leaderboard</string>
     <string name="login">Login</string>
+    <string name="game">Partie</string>
 </resources>
